# eos_sdk_emu-splitux

./: .gitignore  .woodpecker.yml  CMakeLists.txt  DESIGN.md  DESIGN_CALLBACKS.md  DESIGN_CONNECT.md  DESIGN_NETWORK.md  DESIGN_P2P.md  DESIGN_PLATFORM.md  DESIGN_SESSIONS.md  DESIGN_TESTBENCH.md  DEVELOPMENT.md  Makefile  README.md
.github/workflows/: build.yml
SDK/Include/: eos_anticheatclient.h  eos_anticheatclient_types.h  eos_anticheatcommon_types.h  eos_anticheatserver.h  eos_common.h  eos_ecom_types.h  eos_p2p.h  eos_result.h  eos_rtc.h  eos_rtc_audio.h  eos_types.h  eos_ui.h
Samples/Achievements/: Achievements.vcxproj  CMakeLists.txt
Samples/Achievements/Source/: SampleConstants.h
Samples/AntiCheat/Client/: AntiCheat.vcxproj  AntiCheat.vcxproj.filters  CMakeLists.txt
Samples/AntiCheat/Client/Source/: AntiCheatClient.cpp  AntiCheatClient.h  AntiCheatDialog.cpp  AntiCheatDialog.h  AntiCheatNetworkTransport.cpp  AntiCheatP2PNetworkTransport.cpp  AntiCheatP2PNetworkTransport.h  Game.cpp  Game.h  RemoteConnection.h  SampleConstants.h
Samples/AntiCheat/Client/cmake/: FindSDL2NET.cmake
Samples/AntiCheat/Server/: AntiCheatServer.vcxproj  CMakeLists.txt
Samples/AntiCheat/Server/Source/: AntiCheatNetworkTransport.cpp  SampleConstants.h
Samples/AuthAndFriends/: AuthAndFriends.vcxproj  CMakeLists.txt
Samples/AuthAndFriends/Source/: SampleConstants.h
Samples/Leaderboard/: CMakeLists.txt  Leaderboard.vcxproj
Samples/Leaderboard/Source/: SampleConstants.h
Samples/Lobbies/: CMakeLists.txt  Lobbies.vcxproj
Samples/Lobbies/Source/: Lobbies.cpp  Lobbies.h  LobbiesDialog.h  SampleConstants.h
Samples/Lobbies/cmake/: FindSDL2TTF.cmake
Samples/Mods/: CMakeLists.txt  Mods.vcxproj
Samples/Mods/Source/: SampleConstants.h
Samples/P2PNAT/: CMakeLists.txt  P2PNAT.vcxproj
Samples/P2PNAT/Source/: SampleConstants.h
Samples/PlayerDataStorage/: CMakeLists.txt  PlayerDataStorage.vcxproj
Samples/PlayerDataStorage/Source/: SampleConstants.h
Samples/SessionMatchmaking/: CMakeLists.txt  SessionMatchmaking.vcxproj
Samples/SessionMatchmaking/Source/: NewSessionDialog.cpp  SampleConstants.h  SessionInviteReceivedDialog.cpp  SessionMatchmaking.cpp  SessionMatchmaking.h  SessionsTableRowView.cpp
Samples/Shared/Source/: BaseGame.cpp  BaseGame.h  BaseLevel.cpp  BaseLevel.h  BaseMenu.cpp  BaseMenu.h  pch.h
Samples/Shared/Source/Core/: AccountHelpers.cpp  AccountHelpers.h  Authentication.cpp  Authentication.h  EosUI.cpp  EosUI.h  Friends.cpp  Friends.h  GameEvent.h  HTTPClient.cpp  HTTPClient.h  Metrics.cpp  Metrics.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Users.cpp  Users.h
Samples/Shared/Source/Graphics/: Console.cpp  Console.h  GfxComponent.h  Model.cpp  Model.h  SDLSpriteBatch.cpp  SDLSpriteBatch.h  VectorRender.cpp  VectorRender.h
Samples/Shared/Source/Input/: Input.cpp  Input.h  SDLInput.cpp  SDLInput.h
Samples/Shared/Source/Main/: Main.cpp  Main.h
Samples/Shared/Source/Math/: Color.h  Matrix.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Samples/Store/: CMakeLists.txt  Store.vcxproj
Samples/Store/Source/: SampleConstants.h  Store.cpp  Store.h
Samples/TitleStorage/: CMakeLists.txt  TitleStorage.vcxproj
Samples/TitleStorage/Source/: SampleConstants.h
Samples/Voice/Client/: CMakeLists.txt  Voice.vcxproj
Samples/Voice/Server/: CMakeLists.txt  VoiceServer.vcxproj
build-local/: CMakeCache.txt  Makefile  cmake_install.cmake  network_proto.pb.cc  network_proto.pb.h
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
build-test/: CMakeCache.txt  Makefile  cmake_install.cmake  network_proto.pb.cc  network_proto.pb.h
docs/: RUNNER_SETUP.md
docs/callback-analysis/: CALLBACK_ARCHITECTURE.md  CALLBACK_GAPS_ANALYSIS.md  IMPLEMENTATION_GUIDES.md  QUICK_REFERENCE.md  README.md
eos_dll/: common_includes.h  eos_anticheatclient_flat.cpp  eos_anticheatserver_flat.cpp  eos_flat_platform.cpp  eos_lobby_flat.cpp  eos_rtcdata_flat.cpp  eos_stubs.cpp  eos_stubs2.cpp  eos_stubs3.cpp  eos_userinfo_flat.cpp  eossdk_lobby.cpp  eossdk_lobby.h  eossdk_lobbymodification.cpp  eossdk_p2p.cpp  eossdk_platform.cpp  eossdk_platform.h  eossdk_rtc.cpp  eossdk_rtc.h  eossdk_rtc_admin.cpp  eossdk_rtc_admin.h  eossdk_rtcdata.cpp  eossdk_rtcdata.h  eossdk_userinfo.cpp  eossdk_userinfo.h  helper_funcs.cpp  network.cpp  network.h  settings.cpp  settings.h
extra/eos_sdk/: eos_base.h  eos_lobby_types.h  eos_lobby_types1.14.2.h  eos_p2p_types.h  eos_p2p_types1.14.1.h  eos_p2p_types1.16.4.h  eos_p2p_types1.8.0.h  eos_rtc.h  eos_rtc_data_types.h  eos_rtc_data_types1.16.4.h  eos_rtc_types.h  eos_rtc_types1.14.0.h  eos_rtc_types1.16.4.h  eos_sdk.h  eos_types.h  eos_types1.16.4.h  eos_userinfo_types.h  eos_userinfo_types1.14.0.h  eos_userinfo_types1.16.4.h  eos_userinfo_types1.8.0.h  eos_version.h
include/eos/: eos_achievements.h  eos_achievements_types_deprecated.inl  eos_anticheatclient_types_deprecated.inl  eos_auth_types_deprecated.inl  eos_connect_types.h  eos_custominvites_types.h  eos_ecom.h  eos_integratedplatform.h  eos_leaderboards_types_deprecated.inl  eos_lobby.h  eos_p2p_types.h  eos_presence.h  eos_rtc_audio_types_deprecated.inl  eos_rtc_types.h  eos_sessions.h  eos_ui_types.h  eos_version.h
proto/: network_proto.proto
scripts/: sync-to-vm.sh
src/: auth.c  callbacks.c  callbacks.h  connect.c  integrated_platform.c  lan_common.c  lan_common.h  lan_discovery.c  lan_discovery.h  lan_p2p.c  lan_p2p.h  lobby.c  lobby_details.c  lobby_modification.c  lobby_search.c  logging.c  missing_stubs.c  p2p.c  palworld_stubs.c  platform.c  sanctions.c  session_details.c  session_modification.c  session_search.c  sessions.c  social_bridge.c  stubs.c  stubs_generated.c
src/internal/: auth_internal.h  callbacks.h  connect_internal.h  lan_discovery.h  lobby_internal.h  logging.h  p2p_internal.h  platform_internal.h  sessions_internal.h
test-bench/: README-NETWORK-CONFIG.md  README.md
test-bench/mock-game/: main.c
test-bench/scripts/: test-bidirectional.sh  test-compare.sh  test-dual-windows.ps1  test-dual-windows.sh  test-dual.sh  test-env.sh  test-single.sh
(+85 files in other folders)
